# demos-driven

./: README.md  WORKSPACE.bazel
src/main/: README.md
src/main/java/com/cc/autovalue/: BUILD.bazel  JacksonUtils.java  JsonUtils.java  Main.java  Person.java
src/main/java/com/cc/autovalue/withgson/: BUILD.bazel  GsonUtils.java  Main.java  Story.java
src/main/java/com/cc/autovalue/withjackson/: BUILD.bazel  JacksonUtils.java  Main.java  Person.java
src/main/java/com/cc/cannotations/: BUILD.bazel  Init.java  JsonElement.java  JsonSerializable.java  Main.java  ObjectToJsonConverter.java  Person.java
src/main/java/com/cc/cguice/: AnimalModule.java  AnimalService.java  BUILD.bazel  CatServiceImpl.java  Main.java
src/main/java/com/cc/dynamodb/: BUILD.bazel  Main.java
src/main/java/com/cc/gguice/: App.java  BUILD.bazel  Message.java  MessageModule.java  Printer.java  PrinterImpl.java  PrinterModule.java
src/main/java/com/cc/grpc/: BUILD.bazel  HelloClient.java  HelloServer.java  HelloServiceImpl.java
src/main/java/com/cc/gson/: BUILD.bazel  Main.java  Review.java
src/main/java/com/cc/guice/: readme.md
src/main/java/com/cc/guice/animal/: Animal.java  AnimalModule.java  App.java  BUILD.bazel  CatServiceImpl.java
src/main/java/com/cc/guice/greeter/: App.java  BUILD.bazel  Count.java  Greeter.java  GreeterModule.java  Message.java
src/main/java/com/cc/guice/helloannotation/: ApiKey.java  BUILD.bazel  CreditCardProcessor.java  CreditCardProcessorModule.java  Order.java  PayPal.java  PayPalCreditCardProcessor.java
src/main/java/com/cc/guice/helloconstructor/: BUILD.bazel  ComplexHelloPrinter.java  HelloConstructor.java  HelloModule.java  IHelloPrinter.java  SimpleHelloPrinter.java
src/main/java/com/cc/guice/hellointerface/: BUILD.bazel  ComplexHelloPrinter.java  HelloInterface.java  HelloModule.java  IHelloPrinter.java  SimpleHelloPrinter.java
src/main/java/com/cc/guice/helloname/: BUILD.bazel  ComplexHelloPrinter.java  HelloModule.java  HelloName.java  IHelloPrinter.java  SimpleHelloPrinter.java
src/main/java/com/cc/guice/helloprovides/: BUILD.bazel  BillingModule.java  DatabaseTransactionLog.java  HelloProvides.java  TransactionLog.java
src/main/java/com/cc/guice/helloworld/: BUILD.bazel  HelloPrinter.java  HelloPrinterNotSingleton.java  HelloWorld.java
src/main/java/com/cc/guice/printer/: App.java  BUILD.bazel  Message.java  MessageModule.java  Printer.java  PrinterImpl.java  PrinterModule.java  Service.java
src/main/java/com/cc/jackson/: BUILD.bazel  Book.java  Main.java  Person.java  Student.java
src/main/java/com/cc/thrift/: BUILD.bazel  Client.java  HelloServiceImpl.java  Server.java
src/main/proto/: HelloService.proto
src/main/thrift/: HelloService.thrift
