load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_JVM_EXTERNAL_TAG = "4.1"

RULES_JVM_EXTERNAL_SHA = "f36441aa876c4f6427bfb2d1f2d723b48e9d930b62662bf723ddfb8fc80f0140"

http_archive(
    name = "rules_jvm_external",
    sha256 = RULES_JVM_EXTERNAL_SHA,
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        "io.grpc:grpc-netty-shaded:1.42.1",
        "io.grpc:grpc-protobuf:1.42.1",
        "io.grpc:grpc-stub:1.42.1",
        "io.grpc:grpc-api:1.42.1",
        "com.google.protobuf:protobuf-java:3.19.2",
        "com.google.guava:guava:31.0.1-jre",
        "org.apache.tomcat:annotations-api:6.0.53",
        "org.slf4j:slf4j-api:1.7.35",
        "ch.qos.logback:logback-classic:1.2.10",
        "org.apache.thrift:libthrift:0.15.0",
        "ch.qos.logback:logback-classic:1.2.10",
        "javax.annotation:javax.annotation-api:1.3.2",
        "com.amazonaws:aws-java-sdk:1.12.112",
        "com.amazonaws:aws-java-sdk-dynamodb:1.12.112",
        "com.google.code.gson:gson:2.8.6",
        "com.google.inject:guice:5.1.0",
        "com.fasterxml.jackson.core:jackson-core:2.13.0",
        "com.fasterxml.jackson.core:jackson-annotations:2.13.0",
        "com.fasterxml.jackson.core:jackson-databind:2.13.0",
        "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.0",
        "com.google.auto.value:auto-value:1.7.2",
        "com.google.auto.value:auto-value-parent:1.7.2",
        "com.google.auto.value:auto-value-annotations:1.7.2",
        "junit:junit:4.12",
        "javax.inject:javax.inject:jar:1",
    ],
    repositories = [
        "https://maven.aliyun.com/repository/public",
        "https://repo.maven.apache.org/maven2/",
        "https://maven.google.com",
    ],
)
