#load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "java-maven-lib",
    srcs = glob([
        "*.java",
    ]),
    deps = [
        "@maven//:com_amazonaws_aws_java_sdk",
        "@maven//:com_amazonaws_aws_java_sdk_dynamodb",
        "@maven//:com_google_code_gson_gson",
    ],
)

java_binary(
    name = "dynamodb",
    main_class = "com.cc.dynamodb.Main",
    runtime_deps = [":java-maven-lib"],
)
