#load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "java-maven-lib",
    srcs = glob([
        "*.java",
        "**/*.java",
    ]),
    deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:org_apache_tomcat_annotations_api",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "grpc_server",
    main_class = "com.cc.grpc.HelloServer",
    runtime_deps = [":java-maven-lib"],
)

java_binary(
    name = "grpc_client",
    main_class = "com.cc.grpc.HelloClient",
    runtime_deps = [":java-maven-lib"],
)
