#load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "java-maven-lib",
    srcs = glob([
        "*.java",
    ]),
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_auto_value_auto_value_annotations",
        "@maven//:com_google_auto_value_auto_value_parent",
    ],
)

java_binary(
    name = "jackson",
    main_class = "com.cc.jackson.Main",
    runtime_deps = [":java-maven-lib"],
)
