#load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "java-maven-lib",
    srcs = glob([
        "*.java",
        "**/*.java",
    ]),
    deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:org_apache_thrift_libthrift",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "thrift_server",
    main_class = "com.cc.thrift.Server",
    runtime_deps = [":java-maven-lib"],
)

java_binary(
    name = "thrift_client",
    main_class = "com.cc.thrift.Client",
    runtime_deps = [":java-maven-lib"],
)
