load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "java-maven-lib",
    srcs = glob(["*.java"]),
    deps = [
        "@maven//:com_google_inject_guice",
    ],
)

java_binary(
    name = "animal",
    main_class = "com.cc.guice.animal.App",
    runtime_deps = [":java-maven-lib"],
)
