load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "java-maven-lib",
    srcs = glob(["*.java"]),
    deps = [
        "@maven//:com_google_inject_guice",
        "@maven//:javax_inject_javax_inject_1",
    ],
)

java_binary(
    name = "helloprovides",
    main_class = "com.cc.guice.helloprovides.HelloProvides",
    runtime_deps = [":java-maven-lib"],
)
